--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -136,7 +136,7 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="pinned.html" class="nav-link">
+                    <a href="../buszy.html" class="nav-link">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
@@ -173,7 +173,7 @@
     <nav class="mobile-bottom-nav">
         <ul>
             <li>
-                <a href="pinned.html">
+                <a href="../buszy.html">
                     <span class="icon">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                     </span>
