--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -59,7 +59,7 @@
         background-color: #94d40b;
         color: #000;
         font-weight: bold;
-        font-size: 20px;
+        font-size: 15px;
         padding: 5px 4px;
         border-radius: 5px;
         gap: 10px;
@@ -72,7 +72,7 @@
         background-color: #7db603;
         color: #000;
         font-weight: bold;
-        font-size: 20px;
+        font-size: 15px;
         padding: 5px 4px;
         border-radius: 5px;
         gap: 10px;
@@ -87,7 +87,7 @@
 
     .bus-stop-code-text,
     body.dark-mode .bus-stop-code-text {
-        font-size: 18px;
+        font-size: 15px;
         font-weight: bold;
         color: #000;
         background-color: #fff;
@@ -116,11 +116,12 @@
     }
 
     .road-name {
-        font-size: 15px;
+        font-size: 18px;
     }
 
     .distance {
         font-weight: bold;
+        font-size: 18px;
     }
 
     .btn-rfetch {
@@ -167,7 +168,7 @@
         body.dark-mode .bus-stop-description {
             margin-left: 0px;
             margin-top: 5px;
-            font-size: 20px;
+            font-size: 15px;
         }
 
         .bus-stop-description span,
@@ -176,6 +177,18 @@
             margin-top: 5px;
             font-size: 15px;
         }
+
+        body.dark-mode .distance,
+        .distance {
+            font-weight: bold;
+            font-size: 15px;
+        }
+
+        body.dark-mode .road-name,
+        .road-name {
+            font-size: 15px;
+        }
+
     }
 </style>
 
