--- a/buszy.html
+++ b/buszy.html
@@ -52,7 +52,7 @@
         background-color: #94d40b;
         color: #000;
         font-weight: bold;
-        font-size: 20px;
+        font-size: 15px;
         padding: 5px 4px;
         border-radius: 5px;
         gap: 10px;
@@ -65,7 +65,7 @@
         background-color: #7db603;
         color: #000;
         font-weight: bold;
-        font-size: 20px;
+        font-size: 15px;
         padding: 5px 4px;
         border-radius: 5px;
         gap: 10px;
@@ -80,7 +80,7 @@
 
     .bus-stop-code-text,
     body.dark-mode .bus-stop-code-text {
-        font-size: 18px;
+        font-size: 15px;
         font-weight: bold;
         color: #000;
         background-color: #fff;
@@ -113,7 +113,7 @@
         body.dark-mode .bus-stop-description {
             margin-left: 0px;
             margin-top: 5px;
-            font-size: 20px;
+            font-size: 15px;
         }
 
         .pinned h2 {
@@ -132,7 +132,7 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="../buszy.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="buszy.html"><img src="img/core-img/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
