--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -60,9 +60,19 @@
     }
 
     .list-group-item {
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
+        padding-top: 1em;
+        padding-bottom: 1em;
+    }
+
+    .lg-menu {
+        font-size: 17px;
+        margin-bottom: 0px;
+        font-weight: bolder;
+    }
+
+    .footer {
+        display: none;
+    }
 
     body.dark-mode .breadcrumb.breadcrumb-fixed {
         background: none;
@@ -77,11 +87,6 @@
         overflow-wrap: break-word;
         line-height: 1.7;
         margin-bottom: 0rem !important;
-    }
-
-
-    .footer {
-        display: none;
     }
 </style>
 
